--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,118 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+
+.main-title {
+  color: #06365f;
+}
+
+.main-text {
+  font-size: 14px;
+}
+
+.header-background {
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 42%);
+  height: 200px;
+  display: flex;
+	flex-direction: row;
+  justify-content: space-around;
+  padding-top: 20%; 
+  padding-left: 15%;
+  padding-right: 15%;
+  width: auto; 
+}
+
+
+.left-side  {
+  padding-right: 10%; 
+  padding-left: 10%; 
+}
+
+.right-side {
+  display: flex; 
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.logo-login {
+  display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center; 
+}
+
+.intro-text {
+
+}
+.download-link {
+  display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center; 
+}
+
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 600px; 
+}
+
+/* .logo-login {
+  display: flex;
+	flex-direction: row;
+  justify-content: space-around;
+  width: 40%; 
+  
+
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @media (min-width: 40em) {
+  .header-background {
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+  }
+} */
+
+
+/*.instagram-logo {
+  margin-top: 10px;
+
+} */
+
+/* .intro-text { 
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	align-content: stretch;
+} 
+
+.intro-text img h2 p { 
+  width: 200px; 
+}
+ */
