--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
+  width: 100%
 }
 
 .main-title {
@@ -18,17 +19,19 @@ body {
   font-size: 14px;
 }
 
-.header-background {
+.container {
   background: rgb(6,54,95);
   background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 42%);
-  height: 200px;
+  height: 180px;
+
   display: flex;
 	flex-direction: row;
   justify-content: space-around;
-  padding-top: 20%; 
+  padding-top: 10%; 
   padding-left: 15%;
   padding-right: 15%;
   width: auto; 
+  
 }
 
 
@@ -37,39 +40,95 @@ body {
   padding-left: 10%; 
 }
 
+.pic-iphone {
+  width: 250px;
+}
+
+
 .right-side {
   display: flex; 
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
 }
 
 .logo-login {
   display: flex;
 	flex-direction: row;
-	justify-content: space-around;
-	align-items: center; 
+	justify-content: space-between;
+  align-items: center; 
+  padding: 0px 30px 0px 30px;
+  width: 100%;
+  /* border: solid purple;  */
+
 }
 
+.login-link-button {
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 52%);    margin-left: auto;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border: 2px solid #06365f;
+    border-radius: 4px;
+  }
+
+  .login-link-button > button {
+    background-color:#1c5380;
+    padding:0px;
+    margin-left: 5px;
+    border: none;
+    color: antiquewhite;
+    font-weight: bold;
+    
+  }
+
 .intro-text {
+  background-image: url(../images/frame.png);
+  background-size: cover; 
+  width: 100%;
+  margin-top: 20px;
+  padding: 20px 30px 20px 30px;
+  font-size: 14px;
+  /* border: solid yellow;  */
 
 }
 .download-link {
-  display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center; 
+  display: flex; 
+  flex-direction: row; 
+  width: 100%;
+  margin-top: 20px;
+  padding: 0px 30px 0px 30px;
+  font-size: 14px;
 }
 
-
+.download-link > img {
+  padding-right: 25px; 
+}
 nav ul {
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: right;
   align-items: center;
-  padding-top: 600px; 
+  padding-top: 300px; 
+  padding-left: 330px;
+  padding-right: 330px;
+  /* border: solid red;  */
+
 }
 
+.footer {
+  /* border: solid blue;  */
+}
+
+nav ul li a {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 70%;
+  /* border: solid orange;  */
+}
 /* .logo-login {
   display: flex;
 	flex-direction: row;
@@ -78,47 +137,3 @@ nav ul {
   
 
 } */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* @media (min-width: 40em) {
-  .header-background {
-    display: grid;
-    grid-template-columns: 2fr 5fr;
-  }
-} */
-
-
-/*.instagram-logo {
-  margin-top: 10px;
-
-} */
-
-/* .intro-text { 
-  display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: space-around;
-	align-items: center;
-	align-content: stretch;
-} 
-
-.intro-text img h2 p { 
-  width: 200px; 
-}
- */
