--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-size: 100% 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  margin: 50px;
+}
+
+
+
+.right{
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+  width: 500px;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login{
+  height: 40px;
+  width: 100px;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+.content{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.intro{
+  width: 90%;
+}
+
+.intro h2 {
+  font-size: 32px;
+  width: 75%;
+  color: #1c5380;
+}
+.download{
+  display: flex;
+  margin: 10px;
+  width:100%;
+}
+
+.download picture {
+  padding: 0 10px;
+}
+
+ul {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+li {
+margin: 10px;
+text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+.grey {
+  color: gray;
 }
