--- a/styles/style.css
+++ b/styles/style.css
@@ -122,11 +122,20 @@ nav ul {
   /* border: solid blue;  */
 }
 
+nav ul {
+  color: #1c5380;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* border: solid pink;  */
+}
+
 nav ul li a {
   color: #1c5380;
   text-decoration: none;
   font-weight: 600;
   font-size: 70%;
+  
   /* border: solid orange;  */
 }
 /* .logo-login {
