--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,101 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-size: auto 32%;
+  background-repeat: repeat-x;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+#phones {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#phones img {
+  width: 70%;
+}
+
+#content {
+  width: 70%;
+  max-width: 500px;
+}
+
+#content .brand {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#content .brand .log-in {
+  background: rgb(66,112,150);
+background: linear-gradient(0deg, rgba(66,112,150,1) 0%, rgba(126,158,186,1) 100%);
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  border-radius: 3px;
+  box-shadow: 0 0 3px 0 #000000b0;
+  color: #fff;
+}
+
+#content .brand .log-in img {
+  padding-right: 5px;
+}
+
+#content .info-text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 40px;
+  margin-top: 10px;
+}
+
+#content .info-text h2 {
+  margin-top: 0;
+  color: #1c5380;
+}
+
+#content .info-text article {
+  margin-bottom: 1em;
+}
+
+#content .info-text .download {
+  margin-top: 25px;
+}
+
+#content .info-text .download img {
+  margin-right: 10px;
+}
+
+#footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 50px 0;
+}
+
+#footer ul {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 1200px;
+  padding: 0;
+  list-style: none;
+}
+
+#footer ul li a {
+  color: #427096;
+}
+
+#footer ul .copy {
+  color: #777;
 }
