--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,102 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: auto;
+  justify-content: center;
+}
+
+.blue-header {
+  background-image: url(../images/bgtile.png);
+  height: 350px;
+  margin-bottom: -200px;
+}
+
+.centerbox {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 950px;
+  height: 600px;
+}
+
+img[src*="phones"]{
+  height: 600px;
+}
+
+.text {
+  width: 500px;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login {
+  background-image: url(../images/frame.png), linear-gradient(180deg, #06365f, 0%, #1c5380 54%);
+  background-size: 200px;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  border-radius: 4px;
+  box-shadow: 0 0 0 1px #06365f;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0.25rem;
+  width: 90px;
+  height: 30px;
+}
+
+.login > p{
+  font-weight: bolder;
+  color: white;
+}
+
+.message-box {
+  height: 460px;
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  margin-left: -10px;
+  padding:20px 50px 0;
+  background-repeat: no-repeat;
+  width: 420px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.message-box > h1 {
+  font-size: 1.5rem;
+  color: #06365f;
+}
+
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  height: 100px;
+  text-align: center;
+  padding-top: 50px;
+}
+
+ul {
+  width: 950px;
+  margin: 10px auto;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+li {
+  font-weight: bold;
+  color: #1c5380;
+}
+
+.copyright {
+  color: gray;
 }
