--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,45 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+100px 200px 100px 200px
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+margin: 20px 100px 20px 100px;
+border: 20px 100px 20px 100px;
+padding: 10%;
+}
+
+.container {
+display: flex;
+}
+
+img.logo {
+float: right;
+}
+
+img.brand {
+float: right;
+}
+
+section.top {
+flex-direction: row;
+flex-wrap: nowrap;
+justify-content: flex-end;
+}
+
+div.text {
+float: right;
+flex-direction: column;
+height: 10px;
+width: 50%;
+}
+
+h2 {
+color: #06365f;
+}
+
+img.apps {
+align-items: stretch;
 }
