--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,12 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -23,7 +29,7 @@ body {
   margin: 0 60px;
 }
 
-button#log-in {
+#log-in {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   color: white;
   background-image: url(../images/bgtile.png);
@@ -43,4 +49,49 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+#main-content {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100% 55%;
+  padding: 50px 80px;
+}
+
+#main-content h2 {
+  color: #06365f;
+}
+
+#key-benefits + div {
+  margin: 50px 0px;
+}
+
+#key-benefits + div > img {
+  margin-right: 30px;
+}
+
+ul {
+  list-style-type: none;
+  display: inline-flex;
+}
+
+li a {
+  text-decoration: none;
+  margin: 0 20px;
+  font-weight: bolder;
+  font-size: 1rem;
+}
+
+li a:visited {
+  color: #1c5380;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer h6 {
+  color: grey;
 }
