--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,95 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-size: auto 45%;
+  background-repeat: repeat-x;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 150px;
 }
+
+.iphones{
+  width: 20% ;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+main{
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+main header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%;
+  margin: 40px 0px 0px 0px;
+}
+
+main article{
+  width: 70%;
+  background-color: white;
+  padding: 40px;
+  margin: 40px;
+  border-radius: 10px;
+  filter:drop-shadow(5px -5px 5px rgba(0, 0, 0, 0.315));
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+button{
+  background-color: #1c5380;
+  padding: 10px;
+  color: white;
+}
+
+.iphone-app{
+  margin-right: 20px;
+}
+
+
+footer{
+  width: 60%;
+}
+
+ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 600;
+  color:#1c5380 ;
+}
+
+.copyright{
+  color:lightgray;
+  font-weight: 200;
+}
+
+
+
+
+
+/*
+.background{
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+  background-size: cover;
+  height: 750px;
+  z-index: -1;
+  position: absolute;
+}
+*/
