--- a/styles/style.css
+++ b/styles/style.css
@@ -12,9 +12,51 @@ body {
 }
 
 .estilo{
-     display:flex;
+    display:flex;
     flex-direction:row;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items: flex-start;
 }
+
+.estilo > section{
+  margin-top: 5%;
+}
+
+h6{
+  color:floralwhite;
+  background: rgba(28,83,128,1);
+  background-size: ;
+  margin-left: ;
+}
+
+h1 {
+  margin-top: -50%;
+  margin-left:5%;
+  color:#1c5380;
+  font-size: 2em;
+}
+
+p{
+  margin-left: 5%;
+  font-size:1em;
+}
+
+.logos{
+  margin-left: 5%;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  color:#1c5380;
+  font-style: bold;
+  margin-top: 5%;
+  font-size: .7em;
+}
+
+li{
+  padding: 0 10px 0 10px;
+}
+
 
