--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,98 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.upper-container {
+  background-color: #1c5380;
+  background-image: linear-gradient #1c5380,#06365f);
+  height: 300px;
+}
+
+.lower-container {
+  margin: 0;
+  background-color: #fff;
+}
+
+.panel {
+  margin: 0 auto;
+  position: relative;
+  padding-top: 100px;
+  width: 1000px;
+}
+
+.phones {
+  position: relative;
+  float: left;
+  width: 20%;
+}
+
+.panel-text {
+  position: relative;
+  float: right;
+  width: 55%;
+  padding: 25px;
+}
+
+.log-in {
+  float: right;
+  margin-top: 25px;
+  padding: 10px 25px;
+  background-image: linear-gradient(to bottom right,#1c5380, #06365f);
+  background-color: #1c5380;
+  font-size: 15px;
+  color: #fff;
+}
+
+.panel-text-container{
+  background-color: #fff;
+  box-shadow: 10px 10px 5px rgba(255, 255, 255, 0.6);
+  box-sizing: border-box;
+  padding: 25px;
+}
+
+.text-intro > h3 {
+  font-size: 24px;
+  color: #1c5380;
+}
+
+.badge-android {
+  width: 150px;
+  height: 50px;
+  padding: 5px;
+}
+
+.badge-iphone {
+  width: 150px;
+  height: 50px;
+  padding: 5px;
+}
+
+.download-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 35px;
+}
+
+.footer {
+  width: 60%;
+  left: 25%;
+  position: relative;
+  padding-top: 100px;
+  font-size: 18px;
+  color: #1c5380;
+  display: inline-flex;
+}
+
+.footer ul {
+  display: flex;
+}
+
+.footer ul li {
+  list-style: none;
+  margin-left: 20px;
+  font-weight: 900;
+}
+.copy {
+  color: grey;
+}
+
