--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,104 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  height: 250px;
+}
+
+main > div {
+  margin-top: 100px;
+  margin-right: 70px;
+}
+
+
+.phones {
+  height: 400px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.logo {
+  width: 300px;
+}
+
+.login::before {
+  content: url("../images/home.png");
+  padding-right: 8px;
+  width: 1px;
+  position: relative;
+  top: 5px;
+}
+
+.login {
+  font-weight: bold;
+  color: white;
+  background-color: #1c5380;
+  padding: 8px;
+  border: #06365f solid;
+  border-radius: 3px;
+  position: relative;
+  top: -30px;
+  right: -55px;
+  font-size: 0.8rem;
+}
+
+.content {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 300px;
+  padding: 10px 40px 0 40px;
+}
+
+.content h2  {
+  color: #06365f;
+  width: 250px;
+}
+
+.content p, .content a {
+  width: 400px;
+}
+
+.content .appstore {
+  width: 150px;
+  padding-right: 10px;
+}
+
+.content .playstore {
+  width: 140px;
+}
+
+footer {
+  margin-top: 250px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  list-style: none;
+  font-size: 0.7rem;
+}
+
+footer ul li {
+  margin-right: 10px;
+  margin-top: 90px;
+  font-weight: bold;
+}
+
+.footer a {
+  color: #06365f;
+}
+
+.copyright a {
+  color: #d9d9d9;
+}
